- Add sort parameter for GetApps on backend + ui + swagger - Fix archives not removed after error message that app is already uploaded - Add routes for cpu profilling(only used when activating an env variable) - Add sort function using sort.SliceStable - Fix NULL value in filter + fix complex filtering - Add profiling repo with StartProfiling and StopProfiling functions
